refactor: category에 맞는 post 조회